# systech-aidd

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  api_main.py  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
.cursor/commands/: review.md
.cursor/plans/: s1-database-persistence-f5742ec9.plan.md  sprint-1-mock-api-ac2d0bc9.plan.md  sprint-2-frontend-init-50447a1f.plan.md  sprint-3-dashboard-implementation-d951da2b.plan.md  sprint-4-chat-implementation-ecb8c27e.plan.md  sprint-d0-plan-a678139d.plan.md  sprint-d1-build-publish-a6b74fac.plan.md
.cursor/rules/: conventions.mdc  qa_conventions.mdc  workflow-tech-debt.mdc  workflow.mdc  workflow_tdd.mdc
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: a1b2c3d4e5f6_add_source_field_to_messages.py  e65a515f830d_create_messages_table.py  package.json  pnpm-lock.yaml
devops/: DASHBOARD_FIX.md  DOCKER_QUICK_START.md  Dockerfile.api  Dockerfile.bot  Dockerfile.frontend  Dockerfile.postgres  FRONTEND_BUILD_FIX.md  FRONTEND_ERRORS_FIXED.md  SPRINT_D0_COMPLETE.md  SPRINT_D1_COMPLETE.md  TROUBLESHOOTING.md
docs/: README.md  conventions.md  frontend-roadmap.md  idea.md  roadmap.md  tasklist.md  tasklist_tech_dept.md  vision.md
frontend/: .gitignore  .npmrc  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.ts
prompts/: nutritionist.txt
src/: __init__.py  bot.py  command_handler.py  config.py  conversation.py  database.py  database_conversation.py  llm_client.py  message_handler.py  protocols.py  types.py
tests/: __init__.py  conftest.py
(+69 files in other folders)
